@@ -1,3 +1,8 @@
+2002-04-23  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkTableEdit.c (Table_EditCmd): fixed problem where row
+	insertion could segfault. [Bug #487747]
+
 2002-04-11  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tclconfig/tcl.m4:
